--- a/css/style.css
+++ b/css/style.css
@@ -22,14 +22,15 @@
     width: 80%;
     margin: auto;
     padding: 50px;
-    background-color: aqua;
+    background-color: #ADD8E6;
 }
 
 .title {
     padding-bottom: 30px;
     text-transform: uppercase;
+    text-shadow: 2px 2px 6px #6a87c5;
     text-align: center;
-    font-size: 50px;
+    font-size: 70px;
     color: azure;
 }
  
